# Eden2RustBackend

./: Cargo.toml  README.md
bitboards/: Cargo.toml
bitboards/src/: lib.rs  squares.rs
board/: Cargo.toml
board/src/: board.rs  castle_permissions.rs  evaluation.rs  generic_magic.rs  legal_move_generations.rs  lib.rs  main.rs  moves.rs  perft.rs  pieces.rs  testing.rs  type_magic.rs  zobrist_hash.rs
generic_magic/: Cargo.toml
lookups/: Cargo.toml  build.rs
lookups/src/: byte_magic.rs  lib.rs
search/src/: alpha_beta.rs  alpha_beta_search.rs  lib.rs  mcts.rs  minimax.rs  move_ordering.rs  optimizer_generics.rs  quiescence.rs  quiescence_search.rs  search_info.rs  temp.rs  traits.rs  transposition_table.rs
uci/: Cargo.toml
uci/src/: go.rs  main.rs  parsing.rs
