[package]
name = "uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { version = "0.1.0", path = "../board" }
generic_magic = { version = "0.1.0", path = "../generic_magic" }
search = { version = "0.1.0", path = "../search" }
text_io = "0.1.12"
